<resources>

    <!--api-->
    <string name="api_url2">%1$s</string>
    <string name="api_url">http://182.148.68.241:8888</string>
    <string name="app_name">DetectionDemo</string>
    <string name="api_id">7B871498-78EA-435E-887C-D2CA750B6E34</string>
    <string name="api_secret">432EFBE19D3C6BDA857C2134E7EA6F09</string>
    <!--ios-->
    <!--<string name="api_id">F39F1B47-ADFE-44C0-BFA6-F9ED6AE4FADA</string>-->
    <!--<string name="api_secret">FFBA20DD51AF493F1DFB35F1D4B7F249</string>-->

    <!--MainActivity-->
    <string name="age_detection">年龄检测</string>
    <string name="gender_detection">性别检测</string>
    <string name="image_prop_detection">人脸检测</string>
    <string name="key_point_detection">关键点检测</string>
    <string name="face_recognition">人脸识别</string>
    <!--FaceRecognition-->
    <string name="person_manage">人员管理</string>
    <string name="add_person">添加人员</string>
    <string name="recognize_person">识别人员</string>
    <string name="delete_person">删除人员</string>
    <string name="updata_person">更新人员</string>
    <string name="name">姓名</string>
    <string name="tag">标签</string>
    <string name="manage_face">管理人脸</string>
    <string name="add_face">添加人脸</string>
    <string name="face_id">人脸ID</string>
    <string name="fetch_face">查看人脸</string>
    <string name="delete_face">删除人脸</string>
    <string name="recognition_face_person">与人员对比</string>
    <string name="recognition_face_group">与人群对比</string>
    <string name="create_group">创建人群</string>
    <string name="recognize_group">识别人群</string>
    <string name="delete_group">删除人群</string>
    <string name="group_manage">人群管理</string>
    <string name="training_person">训练人员</string>
    <string name="training_group">训练人群</string>
    <string name="training_state">训练状态</string>
    <string name="tow_person_recognition">两人对比</string>
    <string name="one_recognition">识别一人</string>
    <string name="faceset_manage">人脸集管理</string>
    <string name="create_faceset">创建人脸集</string>
    <string name="delete_faceset">删除人脸集</string>
    <string name="manage_faceset">人脸集管理</string>

    <!--对话框-->
    <string name="dialog_img_get_title">选择照片</string>
    <string name="dialog_person_chose">选择人员</string>
    <string name="no_any_person">没有人员</string>
    <string name="title_activity_person_manage">PersonManageActivity</string>
    <string name="title_activity_face_manage">FaceManageActivity</string>
    <string name="title_activity_two_face_recognize">TwoFaceRecognizeActivity</string>
    <string name="recognize">识别</string>
    <string name="title_activity_group_manage">GroupManageActivity</string>
    <string name="title_activity_faceset_manage">FaceSetManageActivity</string>

    <!--Toast-->
    <string name="network_fail">网络访问异常</string>
    <string name="recognize_face_ing">正在识别...</string>

    <string name="item_01">更改账号</string>
    <string name="item_02">更改IP</string>
    <string name="chage_setname">修改集合名称</string>
    <string name="groupname">组名</string>
    <string name="setname">名称</string>
    <string name="chage_person_info">修改信息</string>

</resources>
