<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
          />


 <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/main_toolbar"
       >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.compilesense.liuyi.detectiondemo.view.FaceRectangleView
                android:id="@+id/image_view"
                android:scaleType="fitXY"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/age_detection"
                android:text="@string/age_detection"
                style="@style/MyButton"/>
            <Button
                android:id="@+id/gender_detection"
                android:text="@string/gender_detection"
                style="@style/MyButton"/>
            <Button
                android:id="@+id/image_por_detection"
                android:text="@string/image_prop_detection"
                style="@style/MyButton" />
            <Button
                android:id="@+id/key_point_detection"
                android:text="@string/key_point_detection"
                style="@style/MyButton" />
            <Button
                android:id="@+id/face_recognition"
                android:text="@string/face_recognition"
                style="@style/MyButton"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
