<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_dark_background"
        card_view:contentPadding="10dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/item_name"
                android:hint="@string/name"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/item_control"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/item_delete_person"
            android:text="@string/delete_person"
            style="@style/MyButton.b2" />
        <Button
            android:id="@+id/item_recognize_person"
            android:text="@string/recognize_person"
            style="@style/MyButton.b2" />
        <Button
            android:id="@+id/item_manege_face"
            android:text="@string/manage_face"
            style="@style/MyButton.b2" />
    </LinearLayout>

</LinearLayout>