<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:background="@color/cardview_dark_background"
        android:padding="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/item_img_face"
            fresco:placeholderImage="@drawable/jiang"
            android:layout_width="120dp"
            android:layout_height="120dp" />

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/item_tx_face_id"
                android:textSize="12sp"
                android:text="@string/face_id"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/item_bt_delete_face"
                android:minHeight="0dp"
                android:text="@string/delete_face"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:layout_gravity="right"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/item_bt_recognition_face_person"
                android:minHeight="0dp"
                android:padding="8dp"
                android:text="@string/recognition_face_person"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:layout_gravity="right"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/item_bt_recognition_face_group"
                android:minHeight="0dp"
                android:padding="8dp"
                android:text="@string/recognition_face_group"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:layout_gravity="right"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>